compiler/src/test/resources/amyc/execution/failing/MinimalError.amy
module MinimalError
	error("")
end MinimalError
